# Halo-Lipsy

./: .gitignore  README.md  __init__.py  halo_lipsync.py  install.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
checkpoints/: .gitkeep
