[project]
name = "halo-lipsy"
description = "Native AMD Unified Memory Lip Sync for ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["librosa>=0.9.0", "opencv-python>=4.5.0", "scipy>=1.7.0", "numpy>=1.20.0", "torchaudio>=0.10.0", "tqdm>=4.60.0"]

[project.urls]
Repository = "https://github.com/bkpaine1/Halo-Lipsy"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/bkpaine1/Halo-Lipsy/wiki"
"Bug Tracker" = "https://github.com/bkpaine1/Halo-Lipsy/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "Halo-Lipsy"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

