[project]
name = "Halo-Lipsy"
version = "2.2.0"
description = "AMD unified memory lip sync for ComfyUI. Native Wav2Lip inference with no subprocesses - works on Strix Halo, ROCm, and all AMD APUs."
authors = [
    {name = "Brent & Claude Code (Anthropic Opus 4.5)"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/bkpaine1/Halo-Lipsy"
Repository = "https://github.com/bkpaine1/Halo-Lipsy"

[tool.comfy]
PublisherId = "bkpaine1"
DisplayName = "Halo-Lipsy"
Icon = "https://raw.githubusercontent.com/bkpaine1/Halo-Lipsy/main/examples/icon.png"
